<resources>
    <string name="app_name">ToHealth</string>
    <string name="homepage_morningtitle">又是美好的早晨!</string>
    <string name="homepage_noontitle">休閒的午間，小睡一下</string>
    <string name="homepage_afternoontitle">傍晚時分，今天過的好嗎?</string>
    <string name="homepage_nighttitle">輕鬆夜晚!</string>
    <string name="homepage_sleeptitle">該睡覺囉! 明天見!</string>
    <string name="itemSkip_text">跳過</string>
    <string name="itemSwipe_undo">回復</string>
    <string name="itemFinished_text">完成</string>
    <string name="newbieSlogan_homepage">您還沒有項目喔!\n快去項目管理中新增項目吧!</string>
    <string name="finished_todayList">你好棒!! 今天的健康項目都做完了!</string>
    <string name="suspendDayTitle">暫停幾天</string>
    <string name="executeDayTitle">執行幾天</string>
    <string name="weekTitle">禮拜</string>
    <string name="dayTitle">天</string>
    <string name="addSuccessToast">新增完成!</string>
    <string name="SomethingEmpty">有東西還沒填喔!</string>
    <string name="addRepeatTime">重複添加囉!</string>
    <string name="DrugItem">藥品品項</string>
    <string name="EventItem">活動項目</string>
    <string name="MeasureItem">測量項目</string>
    <string name="CareItem">關懷項目</string>
    <string name="upDateSuccess">已成功更新!</string>
    <string name="namingForGroup">幫你的群組取名字吧!</string>
    <string name="checkTheGroupId">請檢查群組號碼輸入是否正確?</string>
    <string name="alreadyHere">你已經在這個群組了拉!</string>
    <string name="board">看板</string>
    <string name="chatRoom">聊天室</string>
    <string name="members">成員</string>
    <string name="noteTitle">筆記</string>
    <string name="reminder">提醒</string>
    <string name="unLimit">無期限</string>
    <string name="setTime_empty">設定時間(空)</string>
    <string name="setTime">設定時間</string>
    <string name="executedTitle">每天執行</string>
    <string name="outDate">剩餘天數</string>
    <string name="foreNotificationTitle">ToHealth 正在監控您的健康數據與群組訊息</string>
    <string name="touchNotificationHint">輕觸可以開啟應用程式</string>
    <string name="cd_more_button">Get more information button</string>
    <string name="cd_add_new_things">Add new things.</string>
    <string name="cd_delete_function">delete function</string>
    <string name="cd_sad">sad select</string>
    <string name="cd_smile">smile select</string>
    <string name="cd_cry">cry select</string>
    <string name="cd_happy">happy select</string>
    <string name="i_want_to_say">我想說…</string>
    <string name="cancel">取消</string>
    <string name="enter">輸入</string>
    <string name="cd_goingtody">goingtody select</string>
    <string name="cd_little_sick">little sick select</string>
    <string name="cd_soso_feel">soso select</string>
    <string name="cd_sick">sick select</string>
    <string name="nothingToShowed">還沒有任何訊息喔!</string>
    <string name="cd_sent_the_message">sent the message</string>
    <string name="cd_others_photo">others photo</string>
    <string name="cd_scan_qr_code">scan the QR code</string>
    <string name="cd_qr_code">QR code</string>
    <string name="qrCodeTitle">群組條碼</string>
    <string name="cd_fast_add">fast add the finished item</string>
    <string name="cd_user_photo">user photo</string>
    <string name="cd_edit_nick_name">edit nick name and privacy</string>
    <string name="cd_item_icon">item icon</string>
    <string name="cd_check">check</string>
    <string name="cd_skip">skip</string>
    <string name="editTitle">編輯</string>
    <string name="stockTitle">目前儲量</string>
    <string name="startTimeTitle">項目起始時間</string>
    <string name="lastEditTitle">上次編輯資訊</string>
    <string name="perTimeTitle">每次</string>
    <string name="itemType">項目名稱</string>
    <string name="cd_checkout_the_statistic">checkout the statistic data</string>
    <string name="cd_check_out_management">check out the management</string>
    <string name="cd_status">check status</string>
    <string name="finished">預定時間完成囉!</string>
    <string name="fastAdd">快速完成</string>
    <string name="stock_hint">例如: 20</string>
    <string name="systolic_hint">比較低的值</string>
    <string name="diastolic_hint">比較高的值</string>
    <string name="emptyTimeSet">若不設定時間，則不會對您進行提醒 \n(您可於首頁右下角快速新增中依需求服藥)</string>
    <string name="drugName">藥物名稱</string>
    <string name="itemSpinner">項目選單</string>
    <string name="periodTitle">執行期限</string>
    <string name="startDay">初始日</string>
    <string name="executePeriod">執行週期</string>
    <string name="cd_select_item_created">select item created</string>
    <string name="cd_select_frequency">select frequency</string>
    <string name="suspendDay">暫停幾天</string>
    <string name="grugUnit">藥品單位</string>
    <string name="grugDose">每次劑量</string>
    <string name="doseHint">每次劑量 (如 : 1 ro 1.5)</string>
    <string name="addTimeSet">新增提醒時間</string>
    <string name="drugStock">藥物庫存</string>
    <string name="cd_select_day_frequency">select day frequency</string>
    <string name="drugName_hint">藥物名稱(中英皆可)</string>
    <string name="originSet">原先設定</string>
    <string name="originStock">原先庫存</string>
    <string name="drugUnit">藥品單位</string>
    <string name="drugDose">每次劑量</string>
    <string name="originUnit">原先單位</string>
    <string name="originDose">原先劑量</string>
    <string name="originPeriod">原先週期</string>
    <string name="originDay">原先天數</string>
    <string name="Ongoing">執行中</string>
    <string name="suspend">暫停執行(可再次執行)</string>
    <string name="StopDoIt">中止執行(不再執行，僅保留執行紀錄)</string>
    <string name="enterGroup">進入群組</string>
    <string name="groupMessage">群組訊息</string>
    <string name="drugLogs">藥物紀錄</string>
    <string name="measureLogs">測量記錄</string>
    <string name="activityLogs">活動項目</string>
    <string name="careLogs">關懷項目</string>
    <string name="heartBeatTitle">心搏</string>
    <string name="bloodSugarBeforeMeal">飯前血糖</string>
    <string name="bloodSugarAfterMeal">飯後血糖</string>
    <string name="spo2">血氧(SpO2)</string>
    <string name="bodyWeight">體重(Kg, 公斤)</string>
    <string name="temperture">體溫(C, 攝氏)</string>
    <string name="logFinished">完成登錄!</string>
    <string name="dataExtract">資料輸出(Coming Soon)</string>
    <string name="userDenyEdit">使用者拒絕群組編輯</string>
    <string name="userDenyCheckout">使用者拒絕群組查看</string>
    <string name="something_wrong">There is something wrong.</string>
    <string name="yourName">你的名字</string>
    <string name="content">內容</string>
    <string name="title">標題</string>
    <string name="comfirm">確定</string>

    <string-array name="ItemType">
        <item>藥品</item>
        <item>測量</item>
        <item>健康活動</item>
        <item>關懷項目</item>
    </string-array>

    <string-array name="Measure_Item">
        <item>血壓</item>
        <item>飯前血糖</item>
        <item>飯後血糖</item>
        <item>血氧</item>
        <item>體重</item>
        <item>體溫</item>
    </string-array>

    <string-array name="End_Date">
        <item>無限期</item>
        <item>共幾天(為短期間使用)</item>
    </string-array>

    <string-array name="Activity_Item">
        <item>健身</item>
        <item>走路(健走)</item>
        <item>物理治療</item>
        <item>跑步</item>
        <item>呼吸訓練</item>
        <item>心理諮商</item>
        <item>冥想</item>
        <item>瑜珈(伸展)</item>
        <item>眼部運動</item>
        <item>中醫治療</item>
        <item>洗腎</item>
    </string-array>

    <string-array name="Period">
        <item>每日數次</item>
        <item>每幾日執行</item>
        <item>每個禮拜幾執行</item>
        <item>連續幾天執行後，再暫停幾天</item>
        <item>依需求執行</item>
    </string-array>

    <string-array name="Care_Item">
        <item>心情關懷</item>
        <item>疼痛關懷</item>
        <item>症狀關懷</item>
        <item>睡眠關懷</item>
    </string-array>

    <string-array name="ItemUnit">
        <item>毫克</item>
        <item>毫升</item>
        <item>針劑</item>
        <item>單位</item>
        <item>滴</item>
        <item>片</item>
        <item>顆</item>
        <item>湯匙</item>
        <item>袋/包</item>
        <item>個</item>
        <item>次</item>
    </string-array>

    <string-array name="week">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

    <string-array name="hour">
        <item>1小時</item>
        <item>2小時</item>
        <item>3小時</item>
        <item>4小時</item>
        <item>5小時</item>
        <item>6小時</item>
        <item>7小時</item>
        <item>8小時</item>
        <item>9小時</item>
        <item>10小時</item>
        <item>11小時</item>
        <item>12小時</item>
        <item>13小時</item>
        <item>14小時</item>
        <item>15小時</item>
        <item>16小時</item>
        <item>17小時</item>
        <item>18小時</item>
        <item>19小時</item>
        <item>20小時</item>
        <item>21小時</item>
        <item>22小時</item>
        <item>23小時</item>
    </string-array>

    <string-array name="day">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
    </string-array>

    <string-array name="cycle_day">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
        <item>7日</item>
        <item>8日</item>
        <item>9日</item>
        <item>10日</item>
        <item>11日</item>
        <item>12日</item>
        <item>13日</item>
        <item>2週</item>
        <item>3週</item>
        <item>1個月</item>
    </string-array>

    <string-array name="Number">
        <item>1次</item>
        <item>2次</item>
        <item>3次</item>
        <item>4次</item>
        <item>5次</item>
        <item>6次</item>
    </string-array>

    <string-array name="editNoteOrCalenderNote">
        <item>備忘錄</item>
        <item>行事曆</item>
    </string-array>

    <string-array name="footer">
        <item>留</item>
        <item>關心您</item>
        <item>紀錄</item>
        <item>通知</item>
        <item>祝福</item>
        <item>改</item>
    </string-array>

</resources>