<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingHorizontal="16dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/itemType"
            android:textAppearance="@style/title_text_bl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_drugTimeLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_checked_ex_statistic"
            tools:listitem="@layout/statistic_drug_time_row" />

        <ImageView
            android:id="@+id/im_checked_ex_statistic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_itemName"
            app:layout_constraintTop_toBottomOf="@+id/tv_itemName"
            app:srcCompat="@drawable/circle_check_green"
            android:contentDescription="@string/cd_check" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/finished"
            android:textAppearance="@style/content_text_bl"
            app:layout_constraintBottom_toBottomOf="@+id/im_checked_ex_statistic"
            app:layout_constraintStart_toEndOf="@+id/im_checked_ex_statistic"
            app:layout_constraintTop_toTopOf="@+id/im_checked_ex_statistic" />

        <ImageView
            android:id="@+id/im_fastAdd_ed_statistic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:srcCompat="@drawable/circle_check_blue"
            android:contentDescription="@string/cd_fast_add"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/fastAdd"
            android:textAppearance="@style/content_text_bl"
            app:layout_constraintBottom_toBottomOf="@+id/im_fastAdd_ed_statistic"
            app:layout_constraintStart_toEndOf="@+id/im_fastAdd_ed_statistic"
            app:layout_constraintTop_toTopOf="@+id/im_fastAdd_ed_statistic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>